--- a/src/jakebellotti/steamvrlauncher/ui/ApplicationGUI.fxml
+++ b/src/jakebellotti/steamvrlauncher/ui/ApplicationGUI.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.Tab?>
@@ -220,12 +221,42 @@
                               <Font size="20.0" />
                            </font>
                         </Label>
-                        <Hyperlink alignment="CENTER" layoutX="355.0" layoutY="89.0" text="https://github.com/jakebellotti/SteamVRLauncher" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
-                        <Label alignment="CENTER" layoutY="30.0" text="By Jake Bellotti" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+                        <Hyperlink fx:id="aboutProjectHyperLink" alignment="CENTER" layoutY="137.0" text="https://github.com/jakebellotti/SteamVRLauncher" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+                           <font>
+                              <Font size="13.0" />
+                           </font>
+                        </Hyperlink>
+                        <Label alignment="CENTER" layoutY="56.0" text="By Jake Bellotti" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+                           <font>
+                              <Font size="20.0" />
+                           </font>
+                        </Label>
+                        <Hyperlink fx:id="aboutRedditHyperlink" alignment="CENTER" layoutY="86.0" text="https://www.reddit.com/user/jakebeau/" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+                           <font>
+                              <Font size="15.0" />
+                           </font>
+                        </Hyperlink>
+                        <Hyperlink fx:id="aboutDistributionsHyperLink" alignment="CENTER" layoutY="185.0" text="https://github.com/jakebellotti/SteamVRLauncher/tree/master/dist" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+                           <font>
+                              <Font size="13.0" />
+                           </font>
+                        </Hyperlink>
+                        <Label alignment="CENTER" layoutY="116.0" text="Follow The Project" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
                            <font>
                               <Font size="15.0" />
                            </font>
                         </Label>
+                        <Label alignment="CENTER" layoutY="164.0" text="Distributions" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+                           <font>
+                              <Font size="15.0" />
+                           </font>
+                        </Label>
+                        <Label fx:id="aboutVersionLabel" alignment="CENTER" layoutY="26.0" text="Version 0.5" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+                           <font>
+                              <Font size="20.0" />
+                           </font>
+                        </Label>
+                        <Separator layoutX="-14.0" layoutY="113.0" prefWidth="200.0" AnchorPane.leftAnchor="-14.0" AnchorPane.rightAnchor="14.0" />
                      </children></AnchorPane>
             </content>
           </Tab>
