--- a/src/jakebellotti/steamvrlauncher/ui/ApplicationGUI.fxml
+++ b/src/jakebellotti/steamvrlauncher/ui/ApplicationGUI.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
@@ -31,13 +32,13 @@
                           <items>
                             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="649.0" prefWidth="268.0" SplitPane.resizableWithParent="false">
                                  <children>
-                                    <ListView fx:id="gamesListView" layoutX="1.0" layoutY="21.0" prefHeight="487.0" prefWidth="266.0" AnchorPane.bottomAnchor="129.0" AnchorPane.leftAnchor="1.0" AnchorPane.rightAnchor="1.0" AnchorPane.topAnchor="66.0" />
+                                    <ListView fx:id="gamesListView" layoutX="1.0" layoutY="21.0" prefHeight="487.0" prefWidth="266.0" AnchorPane.bottomAnchor="129.0" AnchorPane.leftAnchor="1.0" AnchorPane.rightAnchor="1.0" AnchorPane.topAnchor="103.0" />
                                     <Label fx:id="gamesLabel" alignment="CENTER" layoutX="14.0" text="Applications" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
                                        <font>
                                           <Font name="System Bold" size="20.0" />
                                        </font>
                                     </Label>
-                                    <TextField fx:id="searchApplicationsTextField" layoutX="14.0" layoutY="30.0" promptText="Search applications" AnchorPane.leftAnchor="1.0" AnchorPane.rightAnchor="1.0">
+                                    <TextField fx:id="searchApplicationsTextField" layoutX="1.0" layoutY="67.0" promptText="Search applications" AnchorPane.leftAnchor="1.0" AnchorPane.rightAnchor="1.0">
                                        <font>
                                           <Font size="16.0" />
                                        </font>
@@ -57,6 +58,7 @@
                                           <Font size="20.0" />
                                        </font>
                                     </Button>
+                                    <ComboBox fx:id="applicationsListViewLookComboBox" layoutX="1.0" layoutY="30.0" prefWidth="150.0" style="-fx-font: 16px System;" AnchorPane.leftAnchor="1.0" AnchorPane.rightAnchor="1.0" />
                                  </children>
                               </AnchorPane>
                             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="537.0" prefWidth="516.0">
@@ -79,7 +81,7 @@
                                           </CheckBox>
                                           <HBox alignment="CENTER" layoutX="169.0" layoutY="76.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
                                              <children>
-                                                <AnchorPane>
+                                                <AnchorPane prefHeight="69.0" prefWidth="295.0">
                                                    <children>
                                                       <TextField fx:id="currentRenderTargetMultiplierTextField" alignment="CENTER" editable="false" layoutY="25.0" prefHeight="44.0" prefWidth="59.0" text="5.5">
                                                          <font>
@@ -97,6 +99,16 @@
                                                          </font>
                                                       </Label>
                                                       <Label fx:id="savedRenderTargetMultiplierLabel" alignment="CENTER" layoutX="67.0" prefHeight="21.0" prefWidth="59.0" text="Saved">
+                                                         <font>
+                                                            <Font size="16.0" />
+                                                         </font>
+                                                      </Label>
+                                                      <TextField fx:id="outputResolutionTextField" alignment="CENTER" editable="false" layoutX="134.0" layoutY="25.0" prefHeight="44.0" prefWidth="143.0" text="2160 x 1200">
+                                                         <font>
+                                                            <Font size="20.0" />
+                                                         </font>
+                                                      </TextField>
+                                                      <Label fx:id="outputResolutionLabel" alignment="CENTER" layoutX="134.0" prefHeight="25.0" prefWidth="143.0" text="Output Resolution">
                                                          <font>
                                                             <Font size="16.0" />
                                                          </font>
